[package]
name = "nt_server"
version = "0.1.0"
edition = "2024"

[dependencies]
nt_proto = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
thiserror = "2.0.17"
rand = "0.10.0"
paperudp = { git = "https://github.com/curtjs/paperudp.git" }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
reqwest = { version = "0.13.1", features = ["json"] }
dotenvy = "0.15.7"
